convert negate operation to BigDecimal